# craft

./: CMakeLists.txt  LICENSE.md  README.md
include/craft/: character.hpp  chunk.hpp  chunkController.hpp  foo.hpp  octreeNode.hpp  plane.hpp  platformSpecification.hpp  segment.hpp  settings.hpp  shaderProgram.hpp  shaderVoxel.hpp  simplex.hpp  state.hpp  stateController.hpp  stateGame.hpp
shaders/: fragmentShader.frg  vertexShader.vtx  voxel.frag  voxel.vert
src/: character.cpp  chunk.cpp  chunkController.cpp  foo.c  main.cpp  octreeNode.cpp  plane.cpp  segment.cpp  settings.cpp  shaderProgram.cpp  shaderVoxel.cpp  simplex.c  state.cpp  stateController.cpp  stateGame.cpp
